--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -892,6 +892,9 @@ iammeter==0.1.7
 # homeassistant.components.iaqualink
 iaqualink==0.4.1
 
+# homeassistant.components.ibeacon
+ibeacon_ble==0.6.4
+
 # homeassistant.components.watson_tts
 ibm-watson==5.2.2
 
