--- a/.coveragerc
+++ b/.coveragerc
@@ -835,6 +835,7 @@ omit =
     homeassistant/components/nfandroidtv/notify.py
     homeassistant/components/nibe_heatpump/__init__.py
     homeassistant/components/nibe_heatpump/sensor.py
+    homeassistant/components/nibe_heatpump/binary_sensor.py
     homeassistant/components/niko_home_control/light.py
     homeassistant/components/nilu/air_quality.py
     homeassistant/components/nissan_leaf/*
