--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -210,6 +210,7 @@ aiopvapi==2.0.1
 aiopvpc==3.0.0
 
 # homeassistant.components.lidarr
+# homeassistant.components.radarr
 # homeassistant.components.sonarr
 aiopyarr==22.7.0
 
