--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -595,6 +595,9 @@ gridnet==4.0.0
 # homeassistant.components.growatt_server
 growattServer==1.2.2
 
+# homeassistant.components.google_sheets
+gspread==5.5.0
+
 # homeassistant.components.profiler
 guppy3==3.1.2
 
