--- a/.coveragerc
+++ b/.coveragerc
@@ -1000,6 +1000,7 @@ omit =
     homeassistant/components/rachio/entity.py
     homeassistant/components/rachio/switch.py
     homeassistant/components/rachio/webhooks.py
+    homeassistant/components/radarr/calendar.py
     homeassistant/components/radio_browser/__init__.py
     homeassistant/components/radio_browser/media_source.py
     homeassistant/components/radiotherm/__init__.py
