--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2436,6 +2436,9 @@ rocketchat-API==0.6.1
 # homeassistant.components.roku
 rokuecp==0.18.1
 
+# homeassistant.components.romy
+romy==0.0.2
+
 # homeassistant.components.roomba
 roombapy==1.6.10
 
