--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -21,6 +21,7 @@ pytest-asyncio==0.21.0
 pytest-aiohttp==1.0.5
 pytest-cov==4.1.0
 pytest-freezer==0.4.8
+pytest-github-actions-annotate-failures==0.2.0
 pytest-socket==0.6.0
 pytest-test-groups==1.0.3
 pytest-sugar==0.9.7
