--- a/.coveragerc
+++ b/.coveragerc
@@ -473,6 +473,7 @@ omit =
     homeassistant/components/guardian/sensor.py
     homeassistant/components/guardian/switch.py
     homeassistant/components/guardian/util.py
+    homeassistant/components/guardian/valve.py
     homeassistant/components/habitica/__init__.py
     homeassistant/components/habitica/sensor.py
     homeassistant/components/harman_kardon_avr/media_player.py
