--- a/.coveragerc
+++ b/.coveragerc
@@ -1615,6 +1615,7 @@ omit =
     homeassistant/components/yolink/lock.py
     homeassistant/components/yolink/number.py
     homeassistant/components/yolink/sensor.py
+    homeassistant/components/yolink/services.py
     homeassistant/components/yolink/siren.py
     homeassistant/components/yolink/switch.py
     homeassistant/components/youless/__init__.py
