--- a/mypy.ini
+++ b/mypy.ini
@@ -4233,6 +4233,16 @@ disallow_untyped_defs = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.xiaomi_ble.*]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+warn_return_any = true
+warn_unreachable = true
+
 [mypy-homeassistant.components.yale_smart_alarm.*]
 check_untyped_defs = true
 disallow_incomplete_defs = true
