--- a/homeassistant/components/bring/manifest.json
+++ b/homeassistant/components/bring/manifest.json
@@ -3,11 +3,7 @@
   "name": "Bring!",
   "codeowners": ["@miaucl", "@tr4nt0r"],
   "config_flow": true,
-  "dependencies": [],
   "documentation": "https://www.home-assistant.io/integrations/bring",
-  "homekit": {},
   "iot_class": "cloud_polling",
-  "requirements": ["python-bring-api==2.0.0"],
-  "ssdp": [],
-  "zeroconf": []
+  "requirements": ["python-bring-api==2.0.0"]
 }
